[package]
name = "parsed"
version = "0.3.0"
authors = ["sergey-melnychuk"]
edition = "2018"
description = "Parser combinators library."
license = "MIT"
homepage = "https://github.com/sergey-melnychuk/parsed"
repository = "https://github.com/sergey-melnychuk/parsed"
documentation = "https://github.com/sergey-melnychuk/parsed"

[features]
default = []
http = []

[dependencies]

[dev-dependencies]
bencher = "0.1.5"
quickcheck = "0.9.2"

[[bench]]
name = "http"
harness = false
